# COAchallenge

./: README.md
backend/: .env.example  .gitignore  Makefile  main.py  pyproject.toml  setup.sh
backend/migrations/: env.py
backend/migrations/versions/: 2b081ee4cbec_new_migration.py  832664c67611_new_migration.py  fc21b09c2455_new_migration.py
backend/src/: config.py  database.py
backend/src/controllers/: account_controller.py  auth_controller.py  budget_controller.py  categories_controller.py  transactions_controller.py
backend/src/middlewares/: auth.py  cronjob.py
backend/src/models/: models.py
backend/src/routers/: account_router.py  auth_router.py  budget_router.py  categories_router.py  notification_router.py  transactions_router.py
backend/src/schemas/: accounts_schema.py  authentication_schemas.py  bugdet_schema.py  categories_schema.py  common_schema.py  transactions_schema.py
backend/src/utils/: fetcher.py  paginator.py  universal_errors.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: ReactQueryProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/report/: page.tsx
frontend/src/components/: AddBudget.tsx  AddSubCategory.tsx  AddTransaction.tsx  Budgets.tsx  CalendarPicker.tsx  Categories.tsx  Header.tsx  Sidebar.tsx  SubCategories.tsx  Transactions.tsx  accounts.tsx
frontend/src/components/ui/: button.tsx  data-table.tsx  passwordinput.tsx
frontend/src/hooks/: useGetFunctions.tsx
frontend/src/lib/: axios.ts  zustandStore.tsx
(+2 files in other folders)
