[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kayigmb <kayigm1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
itsdangerous = "^2.2.0"
pyjwt = "^2.9.0"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
